# elec_store

./: README.md  manage.py  pyproject.toml
authentication/: serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
elec_store/: asgi.py  settings.py  urls.py  wsgi.py
